test/conformance/chainsaw/validate/clusterpolicy/standard/psa/concurrent-policy-execution/policy-asserts.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities-strict
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-namespaces
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-process
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-proc-mount
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-selinux
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-nonroot
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-apparmor-profiles
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp-strict
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-sysctls
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-volume-types
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
